--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,14 +1,11 @@
 {% load static %}<!DOCTYPE html>
-<html>
+<html lang="pt-BR">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Documento</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'global/css/style.css'%}">
+        {% include 'global/partial/_head.html'%}
     </head>
     <body>
+        {% include 'global/partial/_header.html' %}
+
         <main class="content">
             {% block content %}{% endblock content %}
         </main>
