--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         {% include 'global/partial/_header.html' %}
+        {% include 'global/partial/_messages.html' %}
 
         <main class="content">
             {% block content %}{% endblock content %}
